tests/baselines/reference/tsxElementResolution13.errors.txt
file.tsx(10,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.


==== file.tsx (1 errors) ====
    declare namespace JSX {
    	interface Element { }
    	interface ElementAttributesProperty { pr1: any; pr2: any; }
    }
    
    interface Obj1 {
    	new(n: string): any;
    }
    var obj1: Obj1;
    <obj1 x={10} />; // Error
    ~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    